--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "export": "next export"
   },
   "dependencies": {
+    "@primer/react": "^35.14.2",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
@@ -19,6 +20,7 @@
     "next": "13.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "styled-components": "^5.3.6",
     "typescript": "4.8.4"
   }
 }
