--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,6 +12,9 @@ concurrency:
   group: "pages"
   cancel-in-progress: true
 
+env:
+  NEXT_PUBLIC_PUBLIC_PACKAGES: ${{ secrets.PUBLIC_PACKAGES }}
+
 jobs:
   # Build job
   build:
