--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@primer/react": "^35.14.2",
+    "@reduxjs/toolkit": "^1.9.0",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
@@ -20,6 +21,8 @@
     "next": "13.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-thunk-reducer": "^0.3.0",
+    "react-redux": "^8.0.5",
     "styled-components": "^5.3.6",
     "swr": "^1.3.0",
     "typescript": "4.8.4"
