--- a/package.json
+++ b/package.json
@@ -13,9 +13,6 @@
   "dependencies": {
     "@primer/react": "^35.14.2",
     "@reduxjs/toolkit": "^1.9.0",
-    "@types/node": "18.11.9",
-    "@types/react": "18.0.25",
-    "@types/react-dom": "18.0.8",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
     "next": "13.0.3",
@@ -24,7 +21,11 @@
     "react-hook-thunk-reducer": "^0.3.0",
     "react-redux": "^8.0.5",
     "styled-components": "^5.3.6",
-    "swr": "^1.3.0",
     "typescript": "4.8.4"
+  },
+  "devDependencies": {
+    "@types/node": "18.11.9",
+    "@types/react": "18.0.25",
+    "@types/react-dom": "18.0.8"
   }
 }
